Je sais pas ce que j'ai changé

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                  
                  $("#ou").html(ville); 
                  $("#quoi").html(temperature);
-                 $("#deg").html(deg);
+                 $("#deg").html(Math.round(deg));
                  
                  console.log(temperature);
                  console.log(url);
